--- a/andersreizen/angular.json
+++ b/andersreizen/angular.json
@@ -64,6 +64,14 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "/src/environments/environment.ts",
+                  "with": "/src/environments/environment.mock.ts"
+                }
+              ]
             }
           }
         },
@@ -75,6 +83,9 @@
           "configurations": {
             "production": {
               "browserTarget": "andersreizen:build:production"
+            },
+            "mock": {
+              "browserTarget": "andersreizen:build:mock"
             }
           }
         },
